# AIPOLABS-INTERN

./: .gitignore  README.md
Agents and Workflows/: openai_dynamic_tool.py  portia_example.py
Completed Projects/aci-contextualDB/backend/: .env.example  README.md  main.py  pyproject.toml
Completed Projects/aci-contextualDB/backend/app/core/: supabase_client.py
Completed Projects/aci-contextualDB/backend/app/processing/: __init__.py  chunkers.py  cleaners.py  embedders.py  main.py  pipeline.py  vectors.py
Completed Projects/aci-contextualDB/backend/app/processing/test_end_to_end/input/: Building_a_web_search_engine.html  Embeddings - Anthropic.html  Local_Development_&_CLI _ Supabase_Docs.html  Research.html  contextual-db-www-thehindu-com-2025-08-19T12-20-06-122Z.html
Completed Projects/aci-contextualDB/backend/app/processing/test_end_to_end/output/: Building_a_web_search_engine.json  Embeddings - Anthropic.json  Local_Development_&_CLI _ Supabase_Docs.json  Research.json  contextual-db-www-thehindu-com-2025-08-19T12-20-06-122Z.json
Completed Projects/aci-contextualDB/backend/app/services/: __init__.py  asset_repository.py  context_repository.py  ingestion_service.py  search_service.py  storage_service.py
Completed Projects/aci-contextualDB/backend/scripts/: insert_real_test_data.py  test_delete_endpoint.py  test_ingestion_service.py  test_search_service.py  test_storage_service.py
Documentation and Research/: CAMEL Cookbook - Object Detection with ACI.dev MCP Tools.md
mem0 Demo with apps mcp/: README.md  create_config.py  memory_agent.py  object_agent.py  (+1 more)
(+290 files in other folders)
